syntax = "proto3";

package messages.analyzer;

option java_multiple_files = true;
option java_package = "ru.practicum.grpc.messages";

message UserPredictionsRequestProto {
    int64 user_id = 1;          // идентификатор пользователя, для которого вычисляются рекомендации
    int64 max_results = 2;      // ограничение количества мероприятий в результате выполнения запроса
}